# ohheybrian

./: .flaskenv  .gitignore  README.md  config.py  package-lock.json  pyproject.toml  pyproject_archive.toml  requirements.txt  wsgi.py
imports/: import.py  test_input.md  test_input.rst
migrations/versions/: 026a96552457_add_comment_association_for_posts.py  0875ee358b1c_add_blog_models.py  28c0a41adce3_add_category_and_tags.py  36c18955906f_add_spam_bool_to_comment_model.py  5095d0407d9f_add_comments_model.py  55296ddc4f2a_bool_for_comments_which_are_replies.py  75c8fc20ddde_initial.py  8d23dd4465a3_add_user_model.py  a3a449714d6a_add_comment_replies.py  bcadf27e37c2_microblog_posts.py  e51794e2b964_update_comment_model.py
ohheybrian/: __init__.py  database.py  errors.py  extensions.py  helpers.py  models.py
ohheybrian/blueprints/: academics.py  admin.py  auth.py  categories.py  category.py  comment.py  comments.py  home.py  leadership.py  microblog.py  pages.py  post.py  posts.py  search.py  tag.py
ohheybrian/functions/: helpers.py  rss.py
ohheybrian/functions/sync_client/: sync.py
ohheybrian/static/: human.json
ohheybrian/static/assets/: 2025_style.css  new_style.css  script.js  style.css
ohheybrian/templates/: _layout.html
ohheybrian/templates/about/: contact-confirm.html  index.html  resume.html
ohheybrian/templates/academics/: digital-learning.html  events.html  index.html  institute.html  learning-in-out.html  showcase.html  training.html  transcript.html
ohheybrian/templates/academics/partials/: goals.html
ohheybrian/templates/admin/: comments_index.html  index.html  posts_index.html
ohheybrian/templates/category/: index.html  single.html
ohheybrian/templates/comments/: comments.html
ohheybrian/templates/contact/: index.html
ohheybrian/templates/home/: index.html
ohheybrian/templates/icons/: icons.py
ohheybrian/templates/leadership/: index.html
ohheybrian/templates/leadership/partials/: assessment.html  grants.html  institutes.html  technology.html
ohheybrian/templates/macros/: pagination.html
ohheybrian/templates/microblog/: archive.html  article.html  base.html  index.html  post_base.html  search.html  write.html
ohheybrian/templates/privacy/: index.html
ohheybrian/templates/shared/: layout-wrap.html  macros.html
ohheybrian/templates/shared/forms/: comment-reply.html  login.html
ohheybrian/templates/shared/partials/: admin-search-result.html  inline-search.html  nav.html  toast.html
ohheybrian/templates/tag/: index.html  single.html
